Adjustments and corrections to test and connection to the service